feature/service-application-api-endpoints, updated 409 response.
